# gandi-live-dns-rust

./: .all-contributorsrc  .clippy.toml  .codecov.yml  .gitignore  Cargo.toml  LICENSE.txt  README.md  Readme.md  config.toml  example.toml  make-release.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
Docker/: Dockerfile
Packaging/: .gitignore  PKGBUILD  gandi-live-dns.service  gandi-live-dns.sysusers  gandi-live-dns.timer
src/: config.rs  main.rs  opts.rs
src/gandi/: mod.rs
src/ip_source/: Readme.md  common.rs  icanhazip.rs  ip_source.rs  ipify.rs  mod.rs  seeip.rs
