[package]
name = "gandi-live-dns"
description = "Automatically updates your IP address in Gandi's Live DNS. Makes it possible to use Gandi as a dynamic DNS system."
version = "1.6.0"
edition = "2021"
authors = ["Kaan Barmore-Genç <kaan@bgenc.net>"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/SeriousBug/gandi-live-dns-rust"

[profile.release]
strip = "symbols"
lto = true

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
toml = "0.5"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0"
clap = { version = "4.1", features = [
  "derive",
  "cargo",
  "unicode",
  "wrap_help",
] }
tokio = { version = "1.23", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
governor = "0.5"
async-trait = "0.1"
die-exit-2 = "0.4"

[dev-dependencies]
httpmock = "0.6"
regex = "1.6"

[dev-dependencies.die-exit-2]
version = "0.4"
features = ["test"]
